finished JM comments, starting on Sue's

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -348,7 +348,7 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\GDYLNPH2\\DeFilippo et al. - 2021 - Improving short-term recruitment forecasts for coh.pdf}
 }
 
-@article{dfoCanadaPolicyConservation2005,
+@techreport{dfoCanadaPolicyConservation2005,
   title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
   year = {2005},
   collaborator = {DFO},
@@ -1442,7 +1442,7 @@
 }
 
 @article{zhangAccountingNonstationaryStock2021,
-  title = {Accounting for Non-Stationary Stock\textendash Recruitment Relationships in the Development of {{MSY-based}} Reference Points},
+  title = {Accounting for Non-Stationary Stock Recruitment Relationships in the Development of {{MSY-based}} Reference Points},
   author = {Zhang, Fan and Regular, Paul M and Wheeland, Laura and Rideout, Rick M and Morgan, M Joanne},
   editor = {Anderson, Emory},
   year = {2021},
