revised abstract based on Sue's comments

--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -25,7 +25,7 @@ region: Pacific Region
 citation_other_language: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S. et Huang, A.-M.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2022/nnn. iv + 13 p."
 abstract: |
 
-  Limit reference points, LRPs, represent the stock status below which there is increased risk of serious harm to the stock> LRPs are required for major fish stocks prescribed by regulation under amendments to the Canadian *Fisheries Act* (2019). Pacific salmon are unique among marine fish stocks due to their semelaparous and anadromous life history and significant meta-population structure which results in differences in data availability and modelling approaches for assessments and LRP development. We identified seven principles for developing LRPs, adapted from those used for LRPs more broadly among marine species. One key principle unique to Pacific salmon is that LRPs should be aligned with Canada’s Wild Salmon Policy (WSP) objective of preserving biodiversity of salmon at the scale of conservation units (CUs) which are often nested within SMUs. We identified a toolkit of LRP methods and provide guidance on how to implement them and under which conditions they should or should not be applied. In particular, we proposed two types of LRPs based on either the proportion of CUs that have status above the ‘red’ zone for WSP status assessments or aggregate-abundances to the entire SMU. These latter LRPs are derived to have a desired probability of all component CUs being above the ‘red’ zone. We recommend proportion-based LRPs as the default LRP to implement Fish Stock provisions, with aggregate abundance-based LRPs supplemental where required for harvest management. We identify uncertainties associated with each approach, and describe how they can be applied across a arrange of data types, qualities and quantities. Their application is demonstrated on three cases studies: Interior Fraser Coho Salmon *Oncorhynchus kisutch*, West Coast Vancouver Island Chinook Salmon, *O. tshawytscha*, and Inside South Coast Chum  Salmon, *O. keta*, excluding the Fraser River.
+  Limit reference points, LRPs, represent the stock status below which there is increased risk of serious harm to the stock. LRPs are required for major fish stocks, or Stock Management Units (SMUS) that prescribed by regulation under amendments to the Canadian *Fisheries Act* (2019). Pacific salmon are unique among marine fish stocks due to their semelaparous and anadromous life history, and significant meta-population structure. This results in different data availabilty, considerations, and approaches for assessments and LRP development. In this paper, we identified six principles for developing LRPs adapted from those used for LRPs more broadly among marine species. One key principle unique to Pacific salmon is that LRPs should be aligned with Canada’s Wild Salmon Policy (WSP) objective of preserving biodiversity of salmon at the scale of conservation units (CUs) which are often nested within SMUs. We developed methods for calculating LRPs, and identified guidelines on how to implement them and under which conditions they should or should not be applied. We propose that LRPs be identifyied from the proportion of CUs that have status above the ‘red’ zone for WSP status assessments, as a default approach. This provides consistency in status assessments for prioritization across management actions for harvest, habitat and hatcheries that often occur at finer, CU scales. To supplement the default approach, we provide LRPs derived from aggregate abundances to the entire SMU, which may be required for fisheries management purposes in some cases. These latter LRPs are derived to have a desired probability of all component CUs being above the ‘red’ zone given an assumed relationship between aggregate abundances and the proportion of CUs above the 'red' zone. We identify uncertainties associated with each approach, and describe how they can be applied across a range of data types, qualities and quantities. Their application is demonstrated on three cases studies: Interior Fraser Coho Salmon *Oncorhynchus kisutch*, West Coast Vancouver Island Chinook Salmon, *O. tshawytscha*, and Inside South Coast Chum  Salmon, *O. keta*, excluding the Fraser River.
   
 header: "Draft working paper --- Do not cite or circulate" # or "" to omit
 output:
